fixed center align and removed github button css

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -310,11 +310,11 @@
   border-radius: 16px;
 }
 
-.notion-text.notion-block-31e29e21df5845a6b44d260bbbcbffa6 {
+.notion-block-31e29e21df5845a6b44d260bbbcbffa6 {
   text-align: center;
 }
 
-.notion-text.notion-block-c02062138f984dfd99e32f7f8ab151d8 {
+.notion-block-c02062138f984dfd99e32f7f8ab151d8 {
   text-align: center;
 }
 
